--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
             <h1 class="title">AdaTasks</h1>
-    </header>
+    </header>s
     <main class="main"> 
         <section class="container add ">
         <form class="task-form-add">
