--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
             <h1 class="title">AdaTasks</h1>
-    </header>s
+    </header>
     <main class="main"> 
         <section class="container add ">
         <form class="task-form-add">
@@ -21,7 +21,7 @@
 
     <section class="container">
         <form class="task-form">
-            <input type="text" class="task-input js-text-task-filter" placeholder="Ejemplo: gim">
+            <input type="text" class="task-input js-text-task-filter" placeholder="Ejemplo: gim" value="">
             <button class="add-task-btn js-btn-filter">Buscar</button>
         </form>
         <ul class="task-list js-list">
