--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
 
-    <title>Lista de Tareas</title>
+    <title>myToDoList</title>
 </head>
 <body>
     <header class="header">
-            <h1 class="title">AdaTasks</h1>
+            <h1 class="title">My to do list</h1>
     </header>
     <main class="main"> 
         <section class="container add ">
         <form class="task-form-add">
-            <input type="text" class="task-input js-text-task-add" placeholder="Nueva tarea">
-            <button class="add-task-btn js-btn-add">Agregar</button>
+            <input type="text" class="task-input js-text-task-add" placeholder="new task">
+            <button class="add-task-btn js-btn-add">Add</button>
         </form>
     </section>
 
     <section class="container">
         <form class="task-form">
-            <input type="text" class="task-input js-text-task-filter" placeholder="Ejemplo: gim" value="">
-            <button class="add-task-btn js-btn-filter">Buscar</button>
+            <input type="text" class="task-input js-text-task-filter" placeholder="go to the gym " value="">
+            <button class="add-task-btn js-btn-filter">Find</button>
         </form>
         <ul class="task-list js-list">
             <!-- Aquí se mostrarán las tareas -->
