--- a/index.html
+++ b/index.html
@@ -11,18 +11,12 @@
     <header class="header">
             <h1 class="title">My to do list</h1>
     </header>
-    <main class="main"> 
-        <section class="container add ">
-        <form class="task-form-add">
-            <input type="text" class="task-input js-text-task-add" placeholder="new task">
-            <button class="add-task-btn js-btn-add">Add</button>
-        </form>
-    </section>
+   
 
-    <section class="container">
+    <section class="container ">
         <form class="task-form">
-            <input type="text" class="task-input js-text-task-filter" placeholder="go to the gym " value="">
-            <button class="add-task-btn js-btn-filter">Find</button>
+            <input type="text" class="task-input js-text-task-add" placeholder="go to the gym " value="">
+            <button class="add-task-btn js-btn-add">Add</button>
         </form>
         <ul class="task-list js-list">
         </ul>
