delete btn in progress

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="svg" href="/images/Pencil.svg">
+
     <link rel="stylesheet" href="./css/main.css">
 
     <title>myToDoList</title>
 </head>
 <body>
     <header class="header">
+        
+           
             <h1 class="title">My to do list</h1>
     </header>
    
@@ -16,12 +20,13 @@
     <section class="container ">
         <form class="task-form">
             <input type="text" class="task-input js-text-task-add" placeholder="go to the gym " value="">
-            <button class="add-task-btn js-btn-add">Add</button>
+            <button class="bounce-in-top add-task-btn  js-btn-add">Add</button>
         </form>
         <ul class="task-list js-list">
         </ul>
     </section>
     </main>
+   
     <script src="./js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
 
