--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 <body>
     <header class="header">
-            <h1 class="title">My to do list</h1>
+            <h1 class="title">My To Do List</h1>
     </header>
    
 
     <section class="container ">
+        <p class="errortext js-error-add"></p>
         <form class="task-form">
             <input type="text" class="task-input js-text-task-add" placeholder="go to the gym " value="">
             <button class="bounce-in-top add-task-btn  js-btn-add">Add</button>
         </form>
+        
         <ul class="task-list js-list">
         </ul>
     </section>
