--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
    
 
-    <section class="container ">
+    <section class="container">
         <p class="errortext js-error-add"></p>
-        <form class="task-form">
+        <form class="task-form js-btn-add">
             <input type="text" class="task-input js-text-task-add" placeholder="go to the gym " value="">
-            <button class="bounce-in-top add-task-btn  js-btn-add">Add</button>
+            <button class="bounce-in-top add-task-btn  ">Add</button>
         </form>
         
         <ul class="task-list js-list">
