--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     </main>
    
-    <script src="./js/main.js"></script>
+    <script src="./dist/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
 
 </body>
